--- a/Heart_disease.ipynb
+++ b/Heart_disease.ipynb
@@ -2129,14 +2129,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8705403543192143"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv_f1_score = cross_val_score(clf, X,y, cv = 5, scoring=\"f1\")\n",
+    "cv_f1_score = np.mean(cv_f1_score)\n",
+    "cv_f1_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# feature importance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=0.20433597178569418, class_weight=None, dual=False,\n",
+       "                   fit_intercept=True, intercept_scaling=1, l1_ratio=None,\n",
+       "                   max_iter=100, multi_class='auto', n_jobs=None, penalty='l2',\n",
+       "                   random_state=None, solver='liblinear', tol=0.0001, verbose=0,\n",
+       "                   warm_start=False)"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf = LogisticRegression(C = 0.20433597178569418,\n",
+    "                         solver = 'liblinear')\n",
+    "\n",
+    "clf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'C': 0.20433597178569418, 'solver': 'liblinear'}"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gs_log_reg.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.00316728, -0.86044636,  0.66067051, -0.01156993, -0.00166374,\n",
+       "         0.04386116,  0.31275829,  0.02459361, -0.60413071, -0.56862818,\n",
+       "         0.45051626, -0.63609888, -0.67663381]])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv_f1_score = cross_val_score(clf, X,y, cv = 5, scoring=\"f1_score\")\n",
-    "cv_f1_score = np.mean(cv_recall)\n",
-    "cv_f1_score"
+    "feature_dict = dict(zip(df.columns, list(clf.coef_[0])))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'age': 0.003167278990517721,\n",
+       " 'sex': -0.8604463644626569,\n",
+       " 'cp': 0.6606705054012705,\n",
+       " 'trestbps': -0.011569931335912368,\n",
+       " 'chol': -0.0016637438070300692,\n",
+       " 'fbs': 0.04386116284216185,\n",
+       " 'restecg': 0.31275829369964075,\n",
+       " 'thalach': 0.02459361297137234,\n",
+       " 'exang': -0.6041307139378419,\n",
+       " 'oldpeak': -0.5686281825180214,\n",
+       " 'slope': 0.450516263738603,\n",
+       " 'ca': -0.6360988840661891,\n",
+       " 'thal': -0.6766338062111971}"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
