--- a/Heart_disease.ipynb
+++ b/Heart_disease.ipynb
@@ -2267,11 +2267,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Results \n",
+    "\n",
+    "we couldn't achieve soo much of accuracy but fair enough!!\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
